# fitness-ai-backend

./: README.md  main.py  pyproject.toml  setup.py
tests/: test_main.py
