[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "fitness-ai-backend"
version = "1.0.0"
description = "FitAnalytics API - FastAPI fitness data processing backend"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
fitness-api = "main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
